# timesfm-for-stock-prediction

./: .gitignore  README.md  pyproject.toml
data/processed/: 01b_aapl_vs_fed_rates.csv  01c_bigtech_normalized_vs_fed.csv  01d_sp500_vs_fed.csv
data/raw/: AAPL_2015-01-01_2024-12-31.csv  AAPL_2015-01-01_2025-12-31.csv  AMZN_2015-01-01_2024-12-31.csv  GOOGL_2015-01-01_2024-12-31.csv  META_2015-01-01_2024-12-31.csv  MSFT_2015-01-01_2024-12-31.csv  ^GSPC_2015-01-01_2024-12-31.csv
scripts/: 01_eda.py  01_eda_fed_rates.py  01_explore_data.py  02_1_stationarity.py  02_2_autocorrelation.py  02_3_decomposition.py  02_baseline_models.py  03_arima.py  03_baselines.py  04_timesfm.py  05_comparison.py  test_timesfm.py
utils/: data.py  metrics.py
utils/models/: __init__.py  arima.py  base.py  metrics.py  naive.py
