[project]
name = "timesfm-for-stock-prediction"
version = "0.1.0"
description = "Estudo de TimesFM (Google) aplicado a previsão de ações — AAPL e além"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandas-datareader>=0.10.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "timesfm>=1.3.0",
    "torch",
    "yfinance>=1.2.0",
]
